Initial Security setup complete. Initial Auth complete. Initial JWT complete. Initial Dependencies injected.
Ready to branch.